--- a/optimize-js-debugger/src/component/App.css
+++ b/optimize-js-debugger/src/component/App.css
@@ -9,12 +9,39 @@
       flex-grow: 1;
       min-width: 0;
 
+      .step-names {
+        .current {
+          font-weight: bold;
+        }
+      }
+
       .bblock {
         border: 1px solid #eee;
-        text-align: center;
+        /* Make translucent to see edges that flow beneath it. */
+        background: rgba(255, 255, 255, 0.8);
+        padding: 0.5rem;
 
-        ol {
+        > h1 {
+          text-align: center;
+        }
+
+        .insts {
           font-size: 0.9rem;
+          font-family: 'Courier New', Courier, monospace;
+          display: table;
+
+          > .inst {
+            display: table-row;
+
+            > div {
+              display: table-cell;
+
+              &:first-child {
+                padding-right: 0.5rem;
+                text-align: right;
+              }
+            }
+          }
         }
       }
     }
