--- a/optimize-js-debugger/src/component/App.css
+++ b/optimize-js-debugger/src/component/App.css
@@ -27,7 +27,7 @@
 
         .insts {
           font-size: 0.9rem;
-          font-family: 'Courier New', Courier, monospace;
+          font-family: "Courier New", Courier, monospace;
           display: table;
 
           > .inst {
