--- a/optimize-js-debugger/src/component/App.css
+++ b/optimize-js-debugger/src/component/App.css
@@ -51,6 +51,10 @@
               }
             }
 
+            .invalid-inst {
+              color: red;
+            }
+
             .const {
               color: orange;
             }
